--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 flask==3.0.2
 opencv-python==4.9.0.80
-ultralytics==8.1.28
-numpy==1.26.4 
+ultralytics==8.0.196
+numpy==1.26.4
+torch==2.0.1
+torchvision==0.15.2 
