--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ opencv-python==4.9.0.80
 ultralytics==8.0.196
 numpy==1.26.4
 torch==2.0.1
-torchvision==0.15.2 
+torchvision==0.15.2
+picamera2==0.3.13 
